# lattice-based-cryptography-samples

./: LICENSE  README.md  pyproject.toml
docs/: answers.md  applications.md  concepts.md  ctf-lattice-guide.md  exercises.md  intuitive-explanation.md  learning-guide.md  math-primer.md  visual-guide.md
examples/: 01_lattice_basics.py  02_lll_reduction.py  03_toy_lwe_encrypt.py  04_tiny_lwe_attack.py  05_ctf_knapsack_lll.py  06_ctf_rational_reconstruction_lll.py
lattice_crypto/: __init__.py  attacks.py  integer_lattice.py  lll.py  lwe.py
tests/: test_lattice_crypto.py
