[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-based-cryptography-samples"
version = "0.1.0"
description = "Learning guide and pure Python toy examples for lattice-based cryptography."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ShundaZhang" }]
dependencies = []

[tool.setuptools]
packages = ["lattice_crypto"]

